# infras-ai-skills

./: CONTRIBUTING.md  README.md
.opencode/skills/: infra-kit  infra-kit.audit  infra-kit.design  infra-kit.github  infra-kit.helm  infra-kit.iac  infra-kit.k8s-doctor  infra-kit.research  infra-kit.thinking
docs/infras-kit/: flow.md
infras-ai-skills-plugin/.claude-plugin/: plugin.json
infras-ai-skills-plugin/.codex-plugin/: plugin.json
infras-ai-skills-plugin/skills/: README.md
infras-ai-skills-plugin/skills/github/: SKILL.md
infras-ai-skills-plugin/skills/github-actions/: SKILL.md
infras-ai-skills-plugin/skills/helm/: SKILL.md
infras-ai-skills-plugin/skills/infra-auditor/: SKILL.md
infras-ai-skills-plugin/skills/infra-design/: SKILL.md
infras-ai-skills-plugin/skills/infra-research/: SKILL.md
infras-kit-plugin/.claude-plugin/: plugin.json
infras-kit-plugin/.codex-plugin/: plugin.json
infras-kit-plugin/skills/: README.md
k8s-troubleshoot/: .gitignore  README.md  pyproject.toml
k8s-troubleshoot/obs_agent/: __init__.py  __main__.py  cli.py  models.py  orchestrator.py
k8s-troubleshoot/obs_agent/collectors/: __init__.py  base.py  loki.py  prometheus.py
k8s-troubleshoot/obs_agent/llm/: __init__.py  presenter.py
k8s-troubleshoot/obs_agent/processors/: __init__.py  context_normalizer.py  correlation.py
k8s-troubleshoot/tests/: test_cli.py
scripts/: install-opencode-skills.sh
terraform-terragrunt-skills-plugin/.claude-plugin/: plugin.json
terraform-terragrunt-skills-plugin/.codex-plugin/: plugin.json
(+53 files in other folders)
