[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "obs-agent"
version = "0.1.0"
description = "CLI experimentation toolkit for Kubernetes incident triage"
authors = [
  { name = "Incident Ops" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer[all]>=0.9.0",
  "rich>=13.7.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.1.0"
]

[project.scripts]
obs-agent = "obs_agent.cli:app"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
